# Pomotree

./: .gitignore  .vercelignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
docs/: focus_tree_implementation_ready_design_doc.md  repo-context.md  tauri-menubar-spike.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev-current.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/menubar/: MenubarApp.tsx  page.tsx
src/components/: CloudSyncPanel.tsx  DailyFocusTimeline.tsx
src/lib/db/: defaults.ts  index.ts  schema.ts
src/lib/services/: cloudSync.test.ts  cloudSync.ts  pomotree.test.ts  pomotree.ts  stats.test.ts  stats.ts  taskSelectors.test.ts  taskSelectors.ts  timeline.test.ts  timeline.ts
src/lib/store/: useAppStore.ts
src/lib/utils/: time.ts  timer.test.ts  timer.ts
src/lib/validation/: domain.test.ts  domain.ts
src/types/: domain.ts
supabase/migrations/: 20260530000000_create_pomotree_snapshots.sql  20260531112618_allow_schema_version_2_snapshots.sql
tests/e2e/: dashboard.spec.ts  focus-flow.spec.ts  menubar.spec.ts  pomotree-smoke.spec.ts  storage-unavailable.spec.ts
