[package]
name = "pomotree"
version = "1.0.0-beta.2"
description = "Pomotree macOS menubar spike"
authors = ["Pomotree"]
edition = "2021"

[lib]
name = "pomotree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon"] }
